--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horizontal scroll image gallery </title>
+    <!-- style -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,7 +25,7 @@
         </div>
         <img src="next.png" id="nextBtn">
     </div>
-    
+    <!-- JavaScript-->
  <script src="app.js"></script>   
 </body>
 </html>
